2002-01-14  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (c-format): Slight reformulation.

2002-01-08  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Emacs Lisp): Update.

2002-01-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST_html): Remove variable.
	(EXTRA_DIST): Remove $(EXTRA_DIST_html).
	(dist-html, dist-html-monolithic, dist-html-split): New rules.
	(distdir): Depend on dist-html.

2002-01-04  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Comparison): Remove paragraph about alloca. libintl
	does not need alloca any more.
	(gettextize Invocation): Mention config.rpath.
	(Adjusting Files): Refer to GNU hello as an example.
	(lib/gettext.h): New node.
	(autoconf macros): New section.
	(Maintainers for other Languages): New section.
	* msgfilter.texi: Mention some filter requirements.

2002-01-04  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi: Update --copyright-holder explanation.

2002-01-03  Bruno Haible  <haible@clisp.cons.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2002-01-02  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (librep): Needs librep 0.15.3 or newer. (setlocale call
	missing in earlier versions.)

2001-12-12  Bruno Haible  <bruno@clisp.org>

	* xgettext.texi: Document option --copyright-holder.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* msggrep.texi: Document that --location arguments may be wildcards.

2001-12-16  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (librep): Update.

2001-12-07  Ben Elliston  <bje@redhat.com>

	* gettext.texi (Overview): Grammar fixes.
	(PO Files): Likewise.
	(Main PO Commands): Likewise.
	(Modifying Translations): Likewise.

2001-12-09  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Common Lisp): Update.

2001-12-08  Bruno Haible  <bruno@clisp.org>

	* msgfilter.texi: Renamed from msgexec.texi.
	* msgexec.texi: New file.
	* gettext.texi (msgfilter Invocation): Renamed from msgexec Invocation.
	(msgexec Invocation): New section.